<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1dp"
    cardview:cardCornerRadius="1dp"
    cardview:cardElevation="1dp"
    cardview:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dataProgramacaoLabelRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/programacao_data"/>
        <TextView
            android:id="@+id/dataProgramacaoRow"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/dataProgramacaoLabelRow"
            android:text="27/04 a 28/04" />
        <TextView
            android:id="@+id/horaProgramacaoLabelRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/dataProgramacaoRow"
            android:layout_marginLeft="25dp"
            android:textStyle="bold"
            android:text="@string/programacao_horario"/>
        <TextView
            android:id="@+id/horaProgramacaoRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/horaProgramacaoLabelRow"
            android:text="08:00 às 10:00"/>
        <TextView
            android:id="@+id/descricaoProgramacaoLabelRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dataProgramacaoLabelRow"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:text="@string/programacao_descricao"/>
        <TextView
            android:id="@+id/descricaoProgramacaoRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_below="@id/descricaoProgramacaoLabelRow"
            android:text="@string/detalhes_descricao_programacao"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>