<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <LinearLayout
            android:id="@+id/retanguloDetalhesEvento"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@drawable/rectangle_appbar"
            android:orientation="vertical">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:srcCompat="@drawable/notificacao"
                android:layout_gravity="center"
                android:elevation="1dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="305dp"
            android:layout_height="524dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="128dp"
            android:background="@drawable/round_outline"
            android:elevation="1dp"
            android:orientation="vertical"
            android:weightSum="1"
            tools:ignore="UselessLeaf">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/cadastrar_lb_nome" />

            <EditText
                android:id="@+id/nomeCadastro"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="-8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />

            <TextView
                android:id="@+id/nomeErroCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="2dp"
                android:text=""
                android:textColor="@color/red"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/cadastrar_lb_email" />

            <EditText
                android:id="@+id/emailCadastro"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="-8dp"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/emailErroCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="2dp"
                android:text=""
                android:textColor="@color/red"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/cadastrar_lb_senha" />

            <EditText
                android:id="@+id/senhaCadastro"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="-8dp"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/senhaErroCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="2dp"
                android:text=""
                android:textColor="@color/red"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/cadastrar_lb_confirmacaosenha" />

            <EditText
                android:id="@+id/confirmaSenhaCadastro"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="-8dp"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/confirmaSenhaErroCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="2dp"
                android:text=""
                android:textColor="@color/red"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/cadastrar_lb_datadenascimento" />

            <EditText
                android:id="@+id/nascimentoCadastro"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="-8dp"
                android:ems="10"
                android:focusable="false"
                android:onClick="showDatePickerDialog"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/cadastrar_lb_sexo" />
            <Spinner
                android:id="@+id/sexo_cadastrar"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ProgressBar
                android:id="@+id/progressBarCadastro"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-6dp"
                android:layout_gravity="center_horizontal"
                android:max="100"
                android:minHeight="28dp"
                android:minWidth="28dp"
                android:indeterminate="true"
                android:indeterminateDrawable="@drawable/progress_bar"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="305dp"
            android:layout_height="135dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="606dp"
            android:layout_gravity="center_horizontal"
            android:elevation="1dp"
            android:orientation="vertical"
            android:weightSum="1"
            tools:ignore="UselessLeaf">
            <Button
                android:id="@+id/button"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_cadastrar"
                android:text="@string/cadastrar_bt_cadastrar"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:onClick="cadastrar"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:weightSum="1"
                tools:ignore="UselessLeaf">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/cadastrar_lb_signin" />

                <Button
                    android:id="@+id/button2"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/cadastrar_bt_signin"
                    android:textAllCaps="false"
                    android:textColor="#BC2B3B"
                    android:textSize="14dp"
                    android:onClick="faca_login"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</ScrollView>